--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -1784,3 +1784,8 @@ audio#podcast {
     padding: 0 !important;
     margin: 0;
 }
+
+.rankingcolumn label {
+    font-size: .8em;
+    display: inline-block;
+}
