--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -1801,6 +1801,13 @@ div#achievements {
     color: hotpink;
 }
 
+.rankingcolumn {
+    width: 50%;
+    float: left;
+    padding: 0 21px;
+    border-right: 1px solid white;
+}
+
 img#avatar {
     /* height: 15vh; */
     
