updates for hellen

--- a/server/http/css/deck-edit.css
+++ b/server/http/css/deck-edit.css
@@ -216,8 +216,11 @@ span.cardImage {
 }
 
 #deckedit label select {
-    width: 6vw;
-    float: left;
+    width: 11vw;
+}
+
+#deckedit select.decklist {
+    margin-left: 2.1vw;
 }
 
 #deckedit label {
