news and animations.

--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -356,6 +356,7 @@ textarea {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
+    transition-duration: 300ms;
 }
 
 @font-face {
