--- a/server/http/css/deck-edit.css
+++ b/server/http/css/deck-edit.css
@@ -162,7 +162,7 @@ button {
 
 button.shuffleDeck {
     margin-top: 0.2vw;
-    margin-left: 3.65vw;
+    margin-left: 3.25vw;
 }
 
 .resultDiv {
@@ -272,6 +272,10 @@ label[for="decknameInput"] > * {
     float: left;
 }
 
+input {
+    height: 0.8vw;
+}
+
 input.decknameInput {
     width: 12.5vw;
     float: right;
@@ -282,23 +286,33 @@ input.decknameInput {
 button.saveDeck {
     float: right;
     margin-top: -3vw;
-    margin-right: 0.5vw;
+    margin-right: 0.9vw;
 }
 
 button.saveDeckAs {
     float: right;
     margin-top: -1.5vw;
-    margin-right: 0.5vw;
+    margin-right: 0.9vw;
 }
 
 button.deleteDeck {
     float: right;
     margin-top: -1.4vw;
-    margin-right: 0.5vw;
+    margin-right: 0.9vw;
 }
 
 select.raceSelect {
     margin-left: 2.65vw;
+}
+
+input.defInput {
+    margin-left: 1vw;
+    width: 8vw;
+}
+
+input.atkInput {
+    margin-left: 1vw;
+    width: 8vw;
 }
 
 .searchBar label {
