--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -1573,6 +1573,23 @@ div[data-game^="32"] {
     color: grey;
 }
 
+[data-arg] {
+    background-image: url('../img/newgiohtoken.png') !important;
+    background-color: rgba(255, 255, 0, .5) !important;
+    background-size: auto 100% !important;
+    text-shadow: 0px 0px 19px black;
+    background-repeat: no-repeat !important;
+    background-size: cover;
+}
+
+.started[data-arg] {
+    background-image: url('../img/outnewgiohtoken.png') !important;
+    background-color: rgba(0, 0, 0, .5) !important;
+    background-size: auto 100% !important;
+    border: 1px solid grey;
+    color: grey;
+}
+
 [data-newgioh] {
     background-image: url('../img/newgiohtoken.png') !important;
     background-color: rgba(255, 255, 0, .5) !important;
