--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -1574,7 +1574,7 @@ div[data-game^="32"] {
 }
 
 [data-arg] {
-    background-image: url('../img/newgiohtoken.png') !important;
+    background-image: url('../img/arg.png') !important;
     background-color: rgba(255, 255, 0, .5) !important;
     background-size: auto 100% !important;
     text-shadow: 0px 0px 19px black;
@@ -1583,7 +1583,7 @@ div[data-game^="32"] {
 }
 
 .started[data-arg] {
-    background-image: url('../img/outnewgiohtoken.png') !important;
+    background-image: url('../img/faded-arg.png') !important;
     background-color: rgba(0, 0, 0, .5) !important;
     background-size: auto 100% !important;
     border: 1px solid grey;
