--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -1564,6 +1564,7 @@ div[data-game^="32"] {
 
 [data-bad] {
     background: red !important;
+    border: 1px solid orange;
 }
 
 .started[data-bad] {
@@ -1571,6 +1572,7 @@ div[data-game^="32"] {
     border: 1px solid grey;
     background-size: auto 100% !important;
     color: grey;
+    border: 1px solid grey;
 }
 
 [data-arg] {
@@ -1578,6 +1580,7 @@ div[data-game^="32"] {
     background-color: rgba(0, 0, 0, .5) !important;
     background-size: auto 100% !important;
     text-shadow: 0px 0px 19px black;
+    border: 1px solid grey;
     background-repeat: no-repeat !important;
     background-size: cover;
 }
