--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -430,6 +430,7 @@ header {
     margin: 2px 1%;
     padding: 5px;
     color: white;
+    cursor: pointer;
 }
 
 div#gamelistitems {
@@ -1762,10 +1763,6 @@ a.launcheronly.loginsystem {
 .gamelistcenter select {
     background: rgba(0, 0, 0, .5);
     color: white;
-}
-
-.web .gamelistcenter {
-    display: none;
 }
 
 @-webkit-keyframes shine {
