--- a/server/http/css/deck-edit.css
+++ b/server/http/css/deck-edit.css
@@ -363,3 +363,8 @@ input.scaleInput {
     float: right;
     margin-right: 7vw;
 }
+
+#deckedit .searchBlock input {
+    float: right;
+    margin-right: 4vw;
+}
